--- a/index.html
+++ b/index.html
@@ -1,38 +1,11 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Color Game!</title>
-	<link rel="stylesheet" type="text/css" href="Color.css">
+	<title>Cate & Dali</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<h1>The Great
-	<br>
-
-	<span id="colorDisplay">RGB</span> 
-	<br>
-	Color Game</h1>
-
-<div id="stripe">
-	<button id="reset">New Colors</button>
-	<span id="message"></span>
-	<button class="mode">Easy</button>
-	<button class="mode selected">Hard</button>
-
-</div>
-
-
-<div id="container">
-	<div class="square"></div>
-	<div class="square"></div>
-	<div class="square"></div>
-	<div class="square"></div>
-	<div class="square"></div>
-	<div class="square"></div>
-</div>
-
-
-
-
-<script type="text/javascript" src="Color.js"></script>
+	<div class=bgimg1>	
+	</div>
 </body>
 </html>
